fixed bug where ui-select options were not visible in modal because of z-index

--- a/source/kit/stylesheets/custom/inline-edits.scss
+++ b/source/kit/stylesheets/custom/inline-edits.scss
@@ -174,6 +174,10 @@
     background-color: rgb(246, 246, 246);
 }
 
+.inline-select.ui-select-container {
+    z-index: 1050;
+}
+
 .inline-edit-container .inline-datepicker {
     & ~ .calendar-button {
         padding: 0px;
